syntax = "proto3";

package services.vchs.api;

enum AssignmentState {
	UNSET = 0;
	MISSING = 1;
	INCOMPLETE = 2;
	SUBMITTED = 3;
	LATE = 4;
	EXEMPT = 5;
}

message Assignment {
	string name = 1;

	int64 time = 2;
	string description = 3;
	AssignmentState state = 4;
	float scored = 5;
	float total = 6;
	string assignment_type_name = 7;
}

message CourseMeeting {
	int64 start_time = 1;
	int64 end_time = 2;
}

message AssignmentType {
	string name = 1;
	float weight = 2;
}

message GradeSnapshot {
	int64 time = 1;
	float value = 2;
}

message Course {
	string name = 1;

	float overall_grade = 2;
	string teacher = 3;
	string teacher_email = 4;
	string remote_meeting_link = 5;
	string room = 6;
	string day_name = 7;
	int32 homework_passes = 8;

	repeated CourseMeeting meetings = 9;
	repeated AssignmentType assignment_types = 10;
	repeated Assignment assignments = 11;
	repeated GradeSnapshot snapshots = 12;
}

message StudentData {
	float gpa = 1;
	repeated string day_names = 2;
	repeated Course courses = 3;
}

